src/mega65/libc/conio.h


/*------------------------------------------------------------------------
  Color and attributes
  -----------------------------------------------------------------------*/
#define ATTRIB_BLINK 0x10
#define ATTRIB_REVERSE 0x20
#define ATTRIB_UNDERLINE 0x80
#define ATTRIB_HIGHLIGHT 0x40

#define COLOUR_BLACK 0
#define COLOUR_WHITE 1
#define COLOUR_RED 2
#define COLOUR_CYAN 3
#define COLOUR_PURPLE 4
#define COLOUR_GREEN 5
#define COLOUR_BLUE 6
#define COLOUR_YELLOW 7
#define COLOUR_ORANGE 8
#define COLOUR_BROWN 9
#define COLOUR_PINK 10
#define COLOUR_GREY1 11
#define COLOUR_DARKGREY 11
#define COLOUR_GREY2 12
#define COLOUR_GREY 12
#define COLOUR_MEDIUMGREY 12
#define COLOUR_LIGHTGREEN 13
#define COLOUR_LIGHTBLUE 14
#define COLOUR_GREY3 15
#define COLOUR_LIGHTGREY 15

/*------------------------------------------------------------------------
  Keyboard modifiers
  -----------------------------------------------------------------------*/
#define KEYMOD_RSHIFT 1
#define KEYMOD_LSHIFT 2
#define KEYMOD_CTRL 4
#define KEYMOD_MEGA 8
#define KEYMOD_ALT 16
#define KEYMOD_NOSCRL 32
#define KEYMOD_CAPSLOCK 64

/*------------------------------------------------------------------------
  Box styles
  -----------------------------------------------------------------------*/
#define BOX_STYLE_NONE 0
#define BOX_STYLE_INNER 1
#define BOX_STYLE_MID 2
#define BOX_STYLE_OUTER 3
#define BOX_STYLE_ROUND 4

/*------------------------------------------------------------------------
  Line styles
  -----------------------------------------------------------------------*/
#define HLINE_STYLE_TOP_THIN 0x63
#define HLINE_STYLE_BTM_THIN 0x64
#define HLINE_STYLE_TOP_NORMAL 0x77
#define HLINE_STYLE_BTM_NORMAL 0x6F
#define HLINE_STYLE_TOP1_8 0x45 // 1/8
#define HLINE_STYLE_TOP3_8 0x44 // 3/8
#define HLINE_STYLE_BTM1_8 0x52 // 1/8
#define HLINE_STYLE_BTM3_8 0x46 // 3/8
#define HLINE_STYLE_MID 0x40
#define HLINE_STYLE_CHECKER 0x68
#define VLINE_STYLE_LEFT_NORMAL 0x74
#define VLINE_STYLE_RIGHT_NORMAL 0x6A
#define VLINE_STYLE_MID 0x42
#define VLINE_STYLE_CHECKER 0x5C

/*------------------------------------------------------------------------
  Input character modes
  -----------------------------------------------------------------------*/
#define CINPUT_ACCEPT_NUMERIC 1
#define CINPUT_ACCEPT_LETTER 2
#define CINPUT_ACCEPT_ALL 4
#define CINPUT_NO_AUTOTRANSLATE 8
#define CINPUT_ACCEPT_ALPHA CINPUT_ACCEPT_NUMERIC | CINPUT_ACCEPT_LETTER

/*------------------------------------------------------------------------
  Public structs
  -----------------------------------------------------------------------*/
typedef struct tagRECT {
  unsigned char left, top, right, bottom;
} RECT;


/*------------------------------------------------------------------------
  Screen configuration and setup
  -----------------------------------------------------------------------*/

/** \m65libsummary{conionit}{Initialises the library internal state}
    \m65libsyntax    {void conioinit(void)}
    \m65libremarks{This must be called before using any conio library function.}
*/
void conioinit(void);


void setlowercase(void);

void setuppercase(void);


/** \m65libsummary{setscreenaddr}{Sets the screen RAM start address}
    \m65libsyntax    {void setscreenaddr(long addr);}
    \m65libparam     {addr}{The address to set as start of screen RAM}
    \m65example   {
      // Set beginning of screen RAM at $48000
      setscreenaddr(0x48000UL);
    }
    \m65libremarks{No bounds check is performed on the selected address}
*/
void setscreenaddr(long addr);


/** \m65libsummary{getscreenaddr}{Returns the screen RAM start address}
    \m65libsyntax    {long getscreenaddr(void);}
    \m65libretval    {The current screen RAM address start address.}
*/
long getscreenaddr(void);


/** \m65libsummary{setcolramoffset}{Sets the color RAM start offset value}
    \m65libsyntax    {void setcolramoffset(long offset);}
    \m65libparam     {addr}{The offset from the beginning of the color RAM address ($FF80000)}
    \m65libremarks{No bounds check is performed on the resulting address. Do not exceed the available Color RAM size}
*/
void setcolramoffset(unsigned int addr);


/** \m65libsummary{getcolramoffset}{Returns the color RAM start offset value}
    \m65libsyntax    {long getscreenaddr(void);}
    \m65libretval    {The current color RAM start offset value.}
*/
unsigned int getcolramoffset(void);


/** \m65libsummary{setcharsetaddr}{Sets the character set start address}
    \m65libsyntax    {void setcharsetaddr(long addr);}
    \m65libparam     {addr}{The address to set as start of character set}
    \m65libremarks   {No bounds check is performed on the selected address}
*/
void setcharsetaddr(long addr);


/** \m65libsummary{getcharsetaddr}{Returns the current character set start address}
    \m65libsyntax    {long getscreenaddr(void);}
    \m65libretval    {The current character set start address.}
*/
long getcharsetaddr(void);


/**
    \m65libsummary{clrscr}{Clear the text screen. }
    \m65libsyntax    {void clrscr(void)}
    \m65example   {
      // Clear screen to white
      textcolor(COLOUR_WHITE);
      clrscr();
    }
    \m65libremarks{Color RAM will be cleared with current text color}
*/
void clrscr(void);


/** \m65libsummary{getscreensize}{Returns the dimensions of the text screen}
    \m65libsyntax    {void getscreensize(unsigned char* width, unsigned char* height)}
    \m65libparam     {width}{Pointer to location where width will be returned}
    \m65libparam     {height}{Pointer to location where height will be returned}
*/
void getscreensize(unsigned char* width, unsigned char* height);


/** \m65libsummary{setscreensize}{Sets the dimensions of the text screen}
    \m65libsyntax    {void setscreensize(unsigned char width, unsigned char height)}
    \m65libparam     {width}{The width in columns (40 or 80)}
    \m65libparam     {height}{The height in rows (25 or 50)}
    \m65libremarks   {Currently only 40/80 and 25/50 are accepted. Other values are ignored.}
*/
void setscreensize(unsigned char width, unsigned char height);


/** \m65libsummary{set16bitcharmode}{Sets or clear the 16-bit character mode}
    \m65libsyntax    {void set16bitcharmode(unsigned char f)}
    \m65libparam     {f}{Set true to set the 16-bit character mode}
    \m65libremarks   {This will trigger a video parameter reset if HOTREG is ENABLED. See sethotregs function.}
*/
void set16bitcharmode(unsigned char f);


/** \m65libsummary{sethotregs}{Sets or clear the hot-register behavior of the VIC-IV chip.}
    \m65libsyntax    {void set16bitcharmode(unsigned char f)}
    \m65libparam     {f}{Set true to enable the hotreg behavior}
    \m65libremarks   {When this mode is ENABLED a video mode reset will be triggered when touching $D011, $D016, $D018, $D031
   or the VIC-II bank bits of $DD00. }
*/
void sethotregs(unsigned char f);


/** \m65libsummary{setextendedattrib}{Sets or clear the VIC-III extended attributes mode to support blink, underline, bold
   and highlight.} \m65libsyntax    {void setextendedattrib(unsigned char f)} \m65libparam     {f}{Set true to set the
   extended attributes mode}
*/
void setextendedattrib(unsigned char f);


/** \m65libsummary{togglecase}{Set lower case character set}
    \m65libsyntax    {void setlowercase(void)}
*/
void setlowercase(void);


/** \m65libsummary{togglecase}{Set upper case character set}
    \m65libsyntax    {void setuppercase(void)}
*/
void setuppercase(void);


/** \m65libsummary{togglecase}{Toggle the current character set case}
    \m65libsyntax    {void togglecase(void)}
*/
void togglecase(void);


/*------------------------------------------------------------------------
  Color and Attributes
  -----------------------------------------------------------------------*/

/** \m65libsummary{bordercolor}{Sets the current border color}
    \m65libsyntax    {void bordercolor(unsigned char c)}
    \m65libparam     {c}{The color to set}
*/
void bordercolor(unsigned char c);


/** \m65libsummary{bgcolor}{Sets the current screen (background) color}
    \m65libsyntax    {void bgcolor(unsigned char c)}
    \m65libparam     {c}{The color to set}
*/
void bgcolor(unsigned char c);


/** \m65libsummary{textcolor}{Sets the current text color}
    \m65libsyntax    {void textcolor(unsigned char c)}
    \m65libparam     {c}{The color to set}
    \m65libremarks   {This function preserves attributes in the upper 4-bits if extended attributes are enabled. See
   setextendedattrib. }
*/
void textcolor(unsigned char c);


/** \m65libsummary{revers}{Enable the reverse attribute}
    \m65libsyntax    {void revers(unsigned char c)}
    \m65libparam     {enable}{0 to disable, 1 to enable}
    \m65libremarks   {Extended attributes mode must be active. See setextendedattrib.}
*/
void revers(unsigned char enable);


/** \m65libsummary{highlight}{Enable the highlight attribute}
    \m65libsyntax    {void highlight(unsigned char c)}
    \m65libparam     {enable}{0 to disable, 1 to enable}
    \m65libremarks   {Extended attributes mode must be active. See setextendedattrib.}
*/
void highlight(unsigned char enable);


/** \m65libsummary{blink}{Enable the blink attribute}
    \m65libsyntax    {void blink(unsigned char c)}
    \m65libparam     {enable}{0 to disable, 1 to enable}
    \m65libremarks   {Extended attributes mode must be active. See setextendedattrib.}
*/
void blink(unsigned char enable);


/** \m65libsummary{underline}{Enable the underline attribute}
    \m65libsyntax    {void underline(unsigned char c)}
    \m65libparam     {enable}{0 to disable, 1 to enable}
    \m65libremarks   {Extended attributes mode must be active. See setextendedattrib.}
*/
void underline(unsigned char enable);


/** \m65libsummary{altpal}{Enable the alternate-palette attribute}
    \m65libsyntax    {void altpal(unsigned char c)}
    \m65libparam     {enable}{0 to disable, 1 to enable}
    \m65libremarks   {Extended attributes mode must be active. See setextendedattrib.}
*/
void altpal(unsigned char enable);


/** \m65libsummary{clearattr}{Clear all text attributes}
    \m65libsyntax    {void clearattr())}
    \m65libremarks   {Extended attributes mode must be active. See setextendedattrib.}
*/
void clearattr(void);


/** \m65libsummary{cellcolor}{Sets the color of a character cell}
    \m65libsyntax    {void cellcolor(unsigned char x, unsigned char y, unsigned char c)}
    \m65libparam     {x}{The cell X-coordinate}
    \m65libparam     {y}{The cell Y-coordinate}
    \m65libparam     {c}{The color to set}
    \m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }
*/
void cellcolor(unsigned char x, unsigned char y, unsigned char c);


/*------------------------------------------------------------------------
  Palette management
  -----------------------------------------------------------------------*/
/** \m65libsummary{setpalbank}{Set current text/bitmap palette bank (BTPALSEL).}
    \m65libsyntax    {void setpalbank(unsigned char bank)}
    \m65libparam     {bank}{The palette bank to set. Valid values are 0, 1, 2 or 3.}
    \m65libremarks   {Use setpalbanka to set alternate text/bitmap palette}
*/
void setpalbank(unsigned char bank);


/** \m65libsummary{setpalbanka}{Set alternate text/bitmap palette bank.}
    \m65libsyntax    {void setpalbanka(unsigned char bank)}
    \m65libparam     {bank}{The palette bank to set. Valid values are 0, 1, 2 or 3.}
    \m65libremarks   {Use setpalbank to set main text/bitmap palette}
*/
void setpalbanka(unsigned char bank);