src/mega65/libc/bindings.rs

/* automatically generated by rust-bindgen 0.63.0 */

pub const ATTRIB_BLINK: u32 = 16;
pub const ATTRIB_REVERSE: u32 = 32;
pub const ATTRIB_UNDERLINE: u32 = 128;
pub const ATTRIB_HIGHLIGHT: u32 = 64;
pub const COLOUR_BLACK: u32 = 0;
pub const COLOUR_WHITE: u32 = 1;
pub const COLOUR_RED: u32 = 2;
pub const COLOUR_CYAN: u32 = 3;
pub const COLOUR_PURPLE: u32 = 4;
pub const COLOUR_GREEN: u32 = 5;
pub const COLOUR_BLUE: u32 = 6;
pub const COLOUR_YELLOW: u32 = 7;
pub const COLOUR_ORANGE: u32 = 8;
pub const COLOUR_BROWN: u32 = 9;
pub const COLOUR_PINK: u32 = 10;
pub const COLOUR_GREY1: u32 = 11;
pub const COLOUR_DARKGREY: u32 = 11;
pub const COLOUR_GREY2: u32 = 12;
pub const COLOUR_GREY: u32 = 12;
pub const COLOUR_MEDIUMGREY: u32 = 12;
pub const COLOUR_LIGHTGREEN: u32 = 13;
pub const COLOUR_LIGHTBLUE: u32 = 14;
pub const COLOUR_GREY3: u32 = 15;
pub const COLOUR_LIGHTGREY: u32 = 15;
pub const KEYMOD_RSHIFT: u32 = 1;
pub const KEYMOD_LSHIFT: u32 = 2;
pub const KEYMOD_CTRL: u32 = 4;
pub const KEYMOD_MEGA: u32 = 8;
pub const KEYMOD_ALT: u32 = 16;
pub const KEYMOD_NOSCRL: u32 = 32;
pub const KEYMOD_CAPSLOCK: u32 = 64;
pub const BOX_STYLE_NONE: u32 = 0;
pub const BOX_STYLE_INNER: u32 = 1;
pub const BOX_STYLE_MID: u32 = 2;
pub const BOX_STYLE_OUTER: u32 = 3;
pub const BOX_STYLE_ROUND: u32 = 4;
pub const HLINE_STYLE_TOP_THIN: u32 = 99;
pub const HLINE_STYLE_BTM_THIN: u32 = 100;
pub const HLINE_STYLE_TOP_NORMAL: u32 = 119;
pub const HLINE_STYLE_BTM_NORMAL: u32 = 111;
pub const HLINE_STYLE_TOP1_8: u32 = 69;
pub const HLINE_STYLE_TOP3_8: u32 = 68;
pub const HLINE_STYLE_BTM1_8: u32 = 82;
pub const HLINE_STYLE_BTM3_8: u32 = 70;
pub const HLINE_STYLE_MID: u32 = 64;
pub const HLINE_STYLE_CHECKER: u32 = 104;
pub const VLINE_STYLE_LEFT_NORMAL: u32 = 116;
pub const VLINE_STYLE_RIGHT_NORMAL: u32 = 106;
pub const VLINE_STYLE_MID: u32 = 66;
pub const VLINE_STYLE_CHECKER: u32 = 92;
pub const CINPUT_ACCEPT_NUMERIC: u32 = 1;
pub const CINPUT_ACCEPT_LETTER: u32 = 2;
pub const CINPUT_ACCEPT_ALL: u32 = 4;
pub const CINPUT_NO_AUTOTRANSLATE: u32 = 8;
pub const CINPUT_ACCEPT_ALPHA: u32 = 3;
pub const TARGET_UNKNOWN: u32 = 0;
pub const TARGET_MEGA65R1: u32 = 1;
pub const TARGET_MEGA65R2: u32 = 2;
pub const TARGET_MEGA65R3: u32 = 3;
pub const TARGET_MEGAPHONER1: u32 = 33;
pub const TARGET_MEGAPHONER4: u32 = 34;
pub const TARGET_NEXYS4: u32 = 64;
pub const TARGET_NEXYS4DDR: u32 = 65;
pub const TARGET_NEXYS4DDRWIDGET: u32 = 66;
pub const TARGET_WUKONG: u32 = 253;
pub const TARGET_SIMULATION: u32 = 254;
pub const TEST_START: u32 = 240;
pub const TEST_SKIP: u32 = 241;
pub const TEST_PASS: u32 = 242;
pub const TEST_FAIL: u32 = 243;
pub const TEST_ERROR: u32 = 244;
pub const TEST_LOG: u32 = 253;
pub const TEST_SETNAME: u32 = 254;
pub const TEST_DONEALL: u32 = 255;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct tagRECT {
    pub left: ::core::ffi::c_uchar,
    pub top: ::core::ffi::c_uchar,
    pub right: ::core::ffi::c_uchar,
    pub bottom: ::core::ffi::c_uchar,
}

pub type RECT = tagRECT;
extern "C" {
    #[doc = " \\m65libsummary{conionit}{Initialises the library internal state}\n\\m65libsyntax    {void conioinit(void)}\n\\m65libremarks{This must be called before using any conio library function.}"]
    pub fn conioinit();
}
extern "C" {
    #[doc = " \\m65libsummary{togglecase}{Set lower case character set}\n\\m65libsyntax    {void setlowercase(void)}"]
    pub fn setlowercase();
}
extern "C" {
    #[doc = " \\m65libsummary{togglecase}{Set upper case character set}\n\\m65libsyntax    {void setuppercase(void)}"]
    pub fn setuppercase();
}
extern "C" {
    #[doc = " \\m65libsummary{setscreenaddr}{Sets the screen RAM start address}\n\\m65libsyntax    {void setscreenaddr(long addr);}\n\\m65libparam     {addr}{The address to set as start of screen RAM}\n\\m65example   {\n// Set beginning of screen RAM at $48000\nsetscreenaddr(0x48000UL);\n}\n\\m65libremarks{No bounds check is performed on the selected address}"]
    pub fn setscreenaddr(addr: ::core::ffi::c_long);
}
extern "C" {
    #[doc = " \\m65libsummary{getscreenaddr}{Returns the screen RAM start address}\n\\m65libsyntax    {long getscreenaddr(void);}\n\\m65libretval    {The current screen RAM address start address.}"]
    pub fn getscreenaddr() -> ::core::ffi::c_long;
}
extern "C" {
    #[doc = " \\m65libsummary{setcolramoffset}{Sets the color RAM start offset value}\n\\m65libsyntax    {void setcolramoffset(long offset);}\n\\m65libparam     {addr}{The offset from the beginning of the color RAM address ($FF80000)}\n\\m65libremarks{No bounds check is performed on the resulting address. Do not exceed the available Color RAM size}"]
    pub fn setcolramoffset(addr: ::core::ffi::c_uint);
}
extern "C" {
    #[doc = " \\m65libsummary{getcolramoffset}{Returns the color RAM start offset value}\n\\m65libsyntax    {long getscreenaddr(void);}\n\\m65libretval    {The current color RAM start offset value.}"]
    pub fn getcolramoffset() -> ::core::ffi::c_uint;
}
extern "C" {
    #[doc = " \\m65libsummary{setcharsetaddr}{Sets the character set start address}\n\\m65libsyntax    {void setcharsetaddr(long addr);}\n\\m65libparam     {addr}{The address to set as start of character set}\n\\m65libremarks   {No bounds check is performed on the selected address}"]
    pub fn setcharsetaddr(addr: ::core::ffi::c_long);
}
extern "C" {
    #[doc = " \\m65libsummary{getcharsetaddr}{Returns the current character set start address}\n\\m65libsyntax    {long getscreenaddr(void);}\n\\m65libretval    {The current character set start address.}"]
    pub fn getcharsetaddr() -> ::core::ffi::c_long;
}
extern "C" {
    #[doc = "\\m65libsummary{clrscr}{Clear the text screen. }\n\\m65libsyntax    {void clrscr(void)}\n\\m65example   {\n// Clear screen to white\ntextcolor(COLOUR_WHITE);\nclrscr();\n}\n\\m65libremarks{Color RAM will be cleared with current text color}"]
    pub fn clrscr();
}
extern "C" {
    #[doc = " \\m65libsummary{getscreensize}{Returns the dimensions of the text screen}\n\\m65libsyntax    {void getscreensize(unsigned char* width, unsigned char* height)}\n\\m65libparam     {width}{Pointer to location where width will be returned}\n\\m65libparam     {height}{Pointer to location where height will be returned}"]
    pub fn getscreensize(width: *mut ::core::ffi::c_uchar, height: *mut ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{setscreensize}{Sets the dimensions of the text screen}\n\\m65libsyntax    {void setscreensize(unsigned char width, unsigned char height)}\n\\m65libparam     {width}{The width in columns (40 or 80)}\n\\m65libparam     {height}{The height in rows (25 or 50)}\n\\m65libremarks   {Currently only 40/80 and 25/50 are accepted. Other values are ignored.}"]
    pub fn setscreensize(width: ::core::ffi::c_uchar, height: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{set16bitcharmode}{Sets or clear the 16-bit character mode}\n\\m65libsyntax    {void set16bitcharmode(unsigned char f)}\n\\m65libparam     {f}{Set true to set the 16-bit character mode}\n\\m65libremarks   {This will trigger a video parameter reset if HOTREG is ENABLED. See sethotregs function.}"]
    pub fn set16bitcharmode(f: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{sethotregs}{Sets or clear the hot-register behavior of the VIC-IV chip.}\n\\m65libsyntax    {void set16bitcharmode(unsigned char f)}\n\\m65libparam     {f}{Set true to enable the hotreg behavior}\n\\m65libremarks   {When this mode is ENABLED a video mode reset will be triggered when touching $D011, $D016, $D018, $D031\nor the VIC-II bank bits of $DD00. }"]
    pub fn sethotregs(f: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{setextendedattrib}{Sets or clear the VIC-III extended attributes mode to support blink, underline, bold\nand highlight.} \\m65libsyntax    {void setextendedattrib(unsigned char f)} \\m65libparam     {f}{Set true to set the\nextended attributes mode}"]
    pub fn setextendedattrib(f: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{togglecase}{Toggle the current character set case}\n\\m65libsyntax    {void togglecase(void)}"]
    pub fn togglecase();
}
extern "C" {
    #[doc = " \\m65libsummary{bordercolor}{Sets the current border color}\n\\m65libsyntax    {void bordercolor(unsigned char c)}\n\\m65libparam     {c}{The color to set}"]
    pub fn bordercolor(c: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{bgcolor}{Sets the current screen (background) color}\n\\m65libsyntax    {void bgcolor(unsigned char c)}\n\\m65libparam     {c}{The color to set}"]
    pub fn bgcolor(c: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{textcolor}{Sets the current text color}\n\\m65libsyntax    {void textcolor(unsigned char c)}\n\\m65libparam     {c}{The color to set}\n\\m65libremarks   {This function preserves attributes in the upper 4-bits if extended attributes are enabled. See\nsetextendedattrib. }"]
    pub fn textcolor(c: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{revers}{Enable the reverse attribute}\n\\m65libsyntax    {void revers(unsigned char c)}\n\\m65libparam     {enable}{0 to disable, 1 to enable}\n\\m65libremarks   {Extended attributes mode must be active. See setextendedattrib.}"]
    pub fn revers(enable: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{highlight}{Enable the highlight attribute}\n\\m65libsyntax    {void highlight(unsigned char c)}\n\\m65libparam     {enable}{0 to disable, 1 to enable}\n\\m65libremarks   {Extended attributes mode must be active. See setextendedattrib.}"]
    pub fn highlight(enable: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{blink}{Enable the blink attribute}\n\\m65libsyntax    {void blink(unsigned char c)}\n\\m65libparam     {enable}{0 to disable, 1 to enable}\n\\m65libremarks   {Extended attributes mode must be active. See setextendedattrib.}"]
    pub fn blink(enable: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{underline}{Enable the underline attribute}\n\\m65libsyntax    {void underline(unsigned char c)}\n\\m65libparam     {enable}{0 to disable, 1 to enable}\n\\m65libremarks   {Extended attributes mode must be active. See setextendedattrib.}"]
    pub fn underline(enable: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{altpal}{Enable the alternate-palette attribute}\n\\m65libsyntax    {void altpal(unsigned char c)}\n\\m65libparam     {enable}{0 to disable, 1 to enable}\n\\m65libremarks   {Extended attributes mode must be active. See setextendedattrib.}"]
    pub fn altpal(enable: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{clearattr}{Clear all text attributes}\n\\m65libsyntax    {void clearattr())}\n\\m65libremarks   {Extended attributes mode must be active. See setextendedattrib.}"]
    pub fn clearattr();
}
extern "C" {
    #[doc = " \\m65libsummary{cellcolor}{Sets the color of a character cell}\n\\m65libsyntax    {void cellcolor(unsigned char x, unsigned char y, unsigned char c)}\n\\m65libparam     {x}{The cell X-coordinate}\n\\m65libparam     {y}{The cell Y-coordinate}\n\\m65libparam     {c}{The color to set}\n\\m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }"]
    pub fn cellcolor(x: ::core::ffi::c_uchar, y: ::core::ffi::c_uchar, c: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{setpalbank}{Set current text/bitmap palette bank (BTPALSEL).}\n\\m65libsyntax    {void setpalbank(unsigned char bank)}\n\\m65libparam     {bank}{The palette bank to set. Valid values are 0, 1, 2 or 3.}\n\\m65libremarks   {Use setpalbanka to set alternate text/bitmap palette}"]
    pub fn setpalbank(bank: ::core::ffi::c_uchar);
}
